--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Recipe Book</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RecipeHub</title>
+  <link rel="stylesheet" href="styles/app.css" />
 </head>
 <body>
-    <header>
-        <h1>Interactive Recipe Book</h1>
-        <input type="text" id="search" placeholder="Search for recipes...">
-    </header>
-    <main>
-        <div id="recipe-list">
-            <!-- Recipes will be dynamically added here -->
-        </div>
-    </main>
-
-    <!-- Modal for recipe details -->
-    <div id="recipe-modal" class="modal">
-        <div class="modal-content" id="recipe-details">
-            <span class="close">&times;</span>
-            <!-- Recipe details will be dynamically added here -->
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+  <div id="root"></div>
+  <script src="index.js"></script>
 </body>
 </html>
